<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinkedList Demonstration</string>
    <string name="node_count">Elements in list: 0</string>
    <string name="menu_settings">Settings</string>
    <string name="add">Add Entry to List</string>
    <string name="show_list">Show Linked List</string>
    <string name="result"></string>
    <string name="edittexthint"></string>
    <string name="search_list">Search for Entry</string>
</resources>